# pdf_toolkit

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/superpowers/plans/: 2026-05-27-mixed-to-pdf.md  2026-05-28-scan-cleanup-compare-preview.md
docs/superpowers/specs/: 2026-05-27-mixed-to-pdf-design.md
pdf_toolkit/: __init__.py  auth.py  cli.py  db.py  jobs.py  logging.py  models.py  queueing.py  settings.py  storage.py  worker.py
pdf_toolkit/pdf_ops/: __init__.py  extract_images.py  id_halves_to_pdf.py  images_to_pdf.py  merge.py  mixed_to_pdf.py  ranges.py  scan_cleanup.py  split.py
pdf_toolkit/web/: app.py  mixed_to_pdf.py  rendering.py  scan_cleanup_forms.py  scan_cleanup_preview.py
pdf_toolkit/web/static/: app.css  scan_cleanup.css
pdf_toolkit/web/templates/: base.html  home.html  job_detail.html  login.html  tool_page.html
pdf_toolkit/web/templates/partials/: job_card.html  notice.html  scan_cleanup_compare.html  scan_cleanup_review.html  scan_cleanup_review_body.html  scan_settings_form.html
pdf_toolkit/web/templates/partials/forms/: extract_images.html  extract_pages.html  id_halves_to_pdf.html  images_to_pdf.html  merge.html  mixed_to_pdf.html  mixed_to_pdf_review.html  scan_cleanup.html  split.html
tests/: conftest.py  test_auth_and_jobs.py  test_cli.py  test_jobs.py  test_pdf_ops.py  test_ranges.py  test_scan_cleanup.py  test_scan_cleanup_tuning_ui.py  test_tool_page_layout.py  test_web_mixed_to_pdf.py
