[project]
name = "pdf-toolkit"
version = "0.2.0"
description = "Single-user PDF toolkit web app with background job processing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "numpy>=2.2.4",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.2.1",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.25.5",
    "python-multipart>=0.0.20",
    "redis>=6.0.0",
    "rq>=2.4.1",
    "sqlalchemy>=2.0.43",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]

[project.scripts]
pdfkit = "pdf_toolkit.cli:main"
pdfkit-web = "pdf_toolkit.web.app:run"
pdfkit-worker = "pdf_toolkit.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdf_toolkit"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "slow: marks tests that exercise large sample PDFs or expensive processing",
]
